feat(condo): DOMA-8919 added custom roles (#4754)
* refactor(condo): DOMA-8919 removed unused error

refactor(condo): DOMA-8919 some refactored

fix(condo): DOMA-8919 fixed controlled tooltip

fix(condo): DOMA-8919 fixed tooltip

refactor(condo): DOMA-8919 refactored utils

fix(condo): DOMA-8919 fixed roles sorting

feat(condo): DOMA-8919 added limit for creating roles

feat(condo): DOMA-8919 updated translations for unknown roles

feat(condo): DOMA-8919 added translations for unknown roles

refactor(condo): DOMA-8919 removed unused import

refactor(condo): DOMA-8919 refactored employee role form

refactor(condo): DOMA-8919 refactored variable names

test(condo): DOMA-8919 added tests for ReplaceOrganizationEmployeeRoleService

chore(condo): DOMA-8919 removed logs

fix(condo): DOMA-8919 fixed imports

feat(condo): DOMA-8919 use deletedAt:null for OrganizationEmployeeRole schema

fix(condo): DOMA-8919 removed deletedAt from access filters

Revert "feat(condo): DOMA-8919 use deletedAt for OrganizationEmployeeRole"

This reverts commit 76ebf0d5eaafc5cc214a72dd85aa25c3844bf124.

feat(pass): DOMA-8919 use deletedAt for OrganizationEmployeeRole

feat(condo): DOMA-8919 use deletedAt for OrganizationEmployeeRole

feat(condo): DOMA-8919 updated B2BAppRole. You cannot use deleted roles

fix(callcenter): DOMA-8919 removed titles on setting pages

fix(condo): DOMA-8919 removed titles on setting pages

fix(condo): DOMA-8919 updated callcenter

fix(condo): DOMA-8919 removed feature flag for employee role

fix(condo): DOMA-8919 fixed navigation on setting page

fix(condo): DOMA-8919 fixed layout

feat(condo): DOMA-8919 fixed deleting of employee role

feat(condo): DOMA-8919 added custom roles in callcenter

chore(condo): DOMA-8919 updated schema

chore(condo): DOMA-8919 updated migration index

feat(condo): DOMA-8919 updated cc

feat(condo): DOMA-8919 added the ability to directly delete an employee role

fix(cond

--- a/packages/ui/src/components/Button/icon/style.less
+++ b/packages/ui/src/components/Button/icon/style.less
@@ -26,6 +26,11 @@
     z-index: 1;
   }
 
+  &::after {
+    // We reset style for ::after element to remove wave effect
+    all: unset;
+  }
+
   // After layer is used to show gradient outline on tab-focusing
   &:focus-visible::after {
     box-sizing: border-box;
