feat(resident-app): DOMA-9182 basic layout 💄 💅  (#4807)
* feat(resident-app): DOMA-9182 added antd + condo ui

* feat(resident-app): DOMA-9182 added active tabs

* fix(ui): DOMA-9182 fixed Button.Icon with href prop

* feat(ui): DOMA-9182 added typography rtl styles from antd

* feat(resident-app): DOMA-9182 basic layout

* fix(resident-app): DOMA-9182 downgrade antd to latest version

* fix(resident-app): DOMA-9182 downgrade antd to latest compatible version

* fix(resident-app): DOMA-9182 replaced key prop with id prop

--- a/packages/ui/src/components/Button/icon/style.less
+++ b/packages/ui/src/components/Button/icon/style.less
@@ -114,3 +114,12 @@
     }
   }
 }
+
+// Overriding antd styles for buttons with href prop
+a.condo-icon-btn {
+  padding-top: @condo-icon-button-padding-medium !important;
+
+  &.condo-icon-btn-small {
+    padding-top: @condo-icon-button-padding-small !important;
+  }
+}
