fix(condo): DOMA-9217 Removed "Doma" from push notification texts (#4836)

--- a/apps/condo/lang/ru/messages/BILLING_RECEIPT_AVAILABLE/default.njk
+++ b/apps/condo/lang/ru/messages/BILLING_RECEIPT_AVAILABLE/default.njk
@@ -1,2 +1,2 @@
-Оплатите счета за квартиру в приложении Domá
+Оплатите счета за квартиру в приложении жителя
 Посмотреть квитанцию можно по ссылке: {{ message.meta.data.url }}
