--- a/apps/condo/lang/ru/messages/BILLING_RECEIPT_AVAILABLE_NO_ACCOUNT/default.njk
+++ b/apps/condo/lang/ru/messages/BILLING_RECEIPT_AVAILABLE_NO_ACCOUNT/default.njk
@@ -1,1 +1,1 @@
-Добавьте лицевой счет и оплатите счета за квартиру в приложении Domá
+Добавьте лицевой счет и оплатите счета за квартиру в приложении
