feat(condo) DOMA-7889 News cross posting frontend (#4830)
* fix(condo) DOMA-7889: init news sharing integration

* feat(condo): DOMA-7888: proof of concept greendom integration app

* feat(condo): DOMA-7889: proof of concept frontend code

* feat(condo): DOMA-7889: remove telegram sharing submodule from the code

feat(condo): DOMA-7889: fix gitmodules

* fix(ui): DOMA-7889: make Card component grow with row && fix border on hover

* refactor(condo): DOMA-7889: introduce translations on SelectSharingAppControl.tsx

* refactor(condo): DOMA-7889: beautify news type markup

* feat(condo): DOMA-7889: add app skipping feature and fix card grids

* fix(condo): DOMA-7889: fix a few linter errors

* feat(condo): DOMA-7889: drop skipped steps on sharing app update

* refactor(condo): DOMA-7889: refactor settings page

* refactor(condo): DOMA-7889: refactor preview widget

* chore(condo): DOMA-7889: update submodules

* refactor(condo): DOMA-7889: implement cleaner form architecture – store form data in useState by steps

* refactor(condo): DOMA-7889: update migrations

* fix(condo): DOMA-7889: fix typescript errors

* fix(condo): DOMA-7889: add more useCallbacks

fix(condo): DOMA-7889: add more useCallbacks

* fix(condo): DOMA-7889: fix eslint errors

* chore(condo): DOMA-7889: update submodule to relevant version

* chore(condo): DOMA-7889: fix variable usage before declaration error

* feat(condo): DOMA-7889: add publish delayed shared news item task, handle new sendAt logic, add tests

* fix(condo): DOMA-7889: fix eslint errors and some warnings

fix(condo): DOMA-7889: fix eslint errors and some warnings

* fix(condo): DOMA-7889: upgrade tests

fix(condo): DOMA-7889: upgrade tests

* fix(condo): DOMA-7889: fix eslint errors

fix(condo): DOMA-7889: fix eslint errors

* fix(condo): DOMA-7889: remove greendom submodule

fix(condo): DOMA-7889: remove greendom submodule

* fix(condo): DOMA-7889: regenerate migrations

--- a/packages/ui/src/components/Card/style.less
+++ b/packages/ui/src/components/Card/style.less
@@ -6,7 +6,8 @@
 @condo-card-focus-outline-indent: -(@condo-global-border-width-default + @condo-card-focus-outline-border-width + 1);
 
 .condo-card {
-  border: none;
+  height: inherit;
+  border: @condo-global-border-width-default solid @condo-global-color-gray-3;
   border-radius: @condo-global-border-radius-large;
 
   &-disabled {
@@ -18,14 +19,12 @@
   &-head {
     min-height: 0;
     overflow: hidden;
-    border: @condo-global-border-width-default solid @condo-global-color-gray-3;
+    border-bottom: @condo-global-border-width-default solid @condo-global-color-gray-3;
     border-radius: @condo-global-border-radius-large @condo-global-border-radius-large 0 0;
   }
 
   &-body {
     overflow: hidden;
-    border: @condo-global-border-width-default solid @condo-global-color-gray-3;
-    border-radius: @condo-global-border-radius-large;
 
     &:not(:first-child) {
       border-top: 0;
