fix(condo): DOMA-9217 fix texts of pushes about ticket changes (#4866)

--- a/apps/condo/lang/en/messages/TICKET_STATUS_IN_PROGRESS/default.njk
+++ b/apps/condo/lang/en/messages/TICKET_STATUS_IN_PROGRESS/default.njk
@@ -1,2 +1,2 @@
-New status "In progress"
+Now ticket #{{ message.meta.data.ticketNumber }} is in progress
 Please follow the link to view the ticket: {{ message.meta.data.url }}
