--- a/apps/condo/lang/ru/messages/TICKET_COMMENT_ADDED/default.njk
+++ b/apps/condo/lang/ru/messages/TICKET_COMMENT_ADDED/default.njk
@@ -1,2 +1,2 @@
-Есть новый комментарий!
+В заявке №{{ message.meta.data.ticketNumber }} новый комментарий
 Посмотреть заявку можно по ссылке: {{ message.meta.data.url }}
