--- a/apps/condo/lang/ru/messages/TICKET_STATUS_COMPLETED/default.njk
+++ b/apps/condo/lang/ru/messages/TICKET_STATUS_COMPLETED/default.njk
@@ -1,2 +1,2 @@
-Ваша заявка №{{ message.meta.data.ticketNumber }} выполнена. Пожалуйста, поставьте оценку
+Ваша заявка №{{ message.meta.data.ticketNumber }} выполнена. Оцените ее в приложении.
 Посмотреть заявку можно по ссылке: {{ message.meta.data.url }}
