--- a/apps/condo/lang/ru/messages/TICKET_STATUS_IN_PROGRESS/default.njk
+++ b/apps/condo/lang/ru/messages/TICKET_STATUS_IN_PROGRESS/default.njk
@@ -1,2 +1,2 @@
-Теперь она "В работе"
+Теперь заявка №{{ message.meta.data.ticketNumber }} в работе
 Посмотреть заявку можно по ссылке: {{ message.meta.data.url }}
