--- a/apps/condo/lang/en/messages/TICKET_STATUS_COMPLETED/push.njk
+++ b/apps/condo/lang/en/messages/TICKET_STATUS_COMPLETED/push.njk
@@ -1,1 +1,1 @@
-Your ticket #{{ message.meta.data.ticketNumber }} has been completed. Please rate
+Your ticket #{{ message.meta.data.ticketNumber }} has been completed. Rate it in the app.
