--- a/apps/condo/lang/ru/messages/TICKET_STATUS_COMPLETED/sms.njk
+++ b/apps/condo/lang/ru/messages/TICKET_STATUS_COMPLETED/sms.njk
@@ -1,1 +1,1 @@
-Ваша заявка №{{ message.meta.data.ticketNumber }} выполнена. Пожалуйста, поставьте оценку
+Ваша заявка №{{ message.meta.data.ticketNumber }} выполнена. Оцените ее в приложении.
