feat(condo): DOMA-9367 added ServiceProblemsAlert component (#4917)
* feat(condo): DOMA-9367 added NotWorkingAlert component

* feat(condo): DOMA-9367 added pages config prop

* feat(condo): DOMA-9367 rename to ServiceProblemsAlert

* fix(condo): DOMA-9367 remove close alert logic

* fix(condo): DOMA-9367 change prop to serviceProblemsAlert

* feat(condo): DOMA-9367 added banner prop to alert component

--- a/packages/ui/src/components/Alert/style.less
+++ b/packages/ui/src/components/Alert/style.less
@@ -17,10 +17,10 @@
     .condo-typography-text-medium();
   }
 
-  &-success,
-  &-info,
-  &-warning,
-  &-error {
+  &-success:not(.condo-alert-banner),
+  &-info:not(.condo-alert-banner),
+  &-warning:not(.condo-alert-banner),
+  &-error:not(.condo-alert-banner) {
     .condo-alert-border();
   }
 
