feat(resident-app): DOMA-9506 residents 👨🏻‍👩🏻‍👦🏻‍👦🏻 (#4911)
* chore(ui): DOMA-9506 add onMount prop to Input.Phone

* chore(ui): DOMA-9506 fix Input.Phone types

* feat(ui): DOMA-9506 added input prefix and changed caret color

* feat(resident-app): DOMA-9506 extractSSR

* feat(resident-app): DOMA-9506 tmp

* feat(ui): DOMA-9506 added ellipsis prop to Select

* fix(resident-app): DOMA-9506 fixed AddressSearch ellipsis

* fix(ui): DOMA-9506 fixed rtl text alignment

* chore(resident-app): DOMA-9506 submodule sync

* chore(resident-app): DOMA-9506 fix stylelint error

--- a/packages/ui/src/components/Input/style.less
+++ b/packages/ui/src/components/Input/style.less
@@ -11,6 +11,12 @@
   .condo-typography-text-large();
 }
 
+.condo-input-with-prefix.condo-input-affix-wrapper {
+  & > .condo-input-prefix {
+    color: @condo-global-color-gray-7;
+  }
+}
+
 .condo-input-with-suffix.condo-input-affix-wrapper {
   padding-right: @condo-global-spacing-4;
 
