--- a/packages/ui/src/components/Select/style.less
+++ b/packages/ui/src/components/Select/style.less
@@ -328,4 +328,11 @@
   .condo-select-item-option-content {
     .condo-typography-text-medium();
   }
+
+  &.condo-select-dropdown-ellipsis-start {
+    .condo-select-item-option-content {
+      direction: rtl;
+      text-align: left;
+    }
+  }
 }
