--- a/apps/condo/lang/en/messages/BILLING_RECEIPT_FILE_ADDED/email.html.njk
+++ b/apps/condo/lang/en/messages/BILLING_RECEIPT_FILE_ADDED/email.html.njk
@@ -9,7 +9,8 @@
     Install application:<br>
 </p>
 <ul style="font-family: Roboto, Arial, 'Nimbus Sans L', Helvetica, sans-serif; font-size: 18px; font-weight: 400; line-height: 32px; text-align: left;">
-    <li> In Google Play/App Store, search for "Doma" application</li>
+    <li> In App Store, search for "Domiki" application</li>
+    <li> In Google Play, search for "Doma" application</li>
     <li> Scan QR-code on receipt or open <a href="https://clck.ru/376TNL">link</a></li>
 </ul>
 <p style="font-family: Roboto, Arial, 'Nimbus Sans L', Helvetica, sans-serif; font-size: 18px; font-weight: 400; line-height: 32px; text-align: left;">
