--- a/apps/condo/lang/ru/messages/BILLING_RECEIPT_FILE_ADDED/email.html.njk
+++ b/apps/condo/lang/ru/messages/BILLING_RECEIPT_FILE_ADDED/email.html.njk
@@ -4,18 +4,17 @@
     Добрый день!<br>
     Высылаем квитанции за услуги ЖКХ.<br>
     <br>
-    Для оплаты и получения квитанций используйте мобильное приложение Doma - в нем можно просмотреть и скачать полную
-    квитанцию.<br>
+    Для оплаты и получения квитанций используйте мобильное приложение Doma - в нем можно просмотреть и скачать полную квитанцию.<br>
     <br>
     Установите приложение:<br>
 </p>
 <ul style="font-family: Roboto, Arial, 'Nimbus Sans L', Helvetica, sans-serif; font-size: 18px; font-weight: 400; line-height: 32px; text-align: left;">
-    <li> В Google Play/App Store, в поисковой строке введите название Doma латинскими буквами</li>
+    <li>если у Вас iOS: необходимо скачать приложение "Domiki". В App Store в поисковой строке ввести латинскими буквами Domiki.</li>
+    <li>если у Вас Аndroid: необходимо скачать приложение “Doma”. В Google Play или Huawei AppGallery в поисковой строке ввести латинскими буквами Doma.</li>
     <li> Отсканируйте QR-код на квитанции или пройдите по <a href="https://clck.ru/376TNL">ссылке</a></li>
 </ul>
 <p style="font-family: Roboto, Arial, 'Nimbus Sans L', Helvetica, sans-serif; font-size: 18px; font-weight: 400; line-height: 32px; text-align: left;">
-    Добавьте номер лицевого счета в приложении. В разделе «Оплаты» выберите квитанцию – «Подробнее» - «Открыть полную
-    квитанцию». Значок скачивания в правом верхнем углу.
+    Добавьте номер лицевого счета в приложении. В разделе «Оплаты» выберите квитанцию – «Подробнее» - «Открыть полную квитанцию». Значок скачивания в правом верхнем углу.
 </p>
 <br>
 <br>
