chore(ui): fix ActionBar `jumping` when scrolling (#5462)
* chore(condo): fix ui affix jumping

* chore(condo): fix ui affix component jump

* chore(condo): make it beautiful on small screens and small tablets

* chore(ui): make affix look better on smartphones

* fix(ui): remove 40px mandatory padding

* fix(ui): fix linter errors

* fix(ui): fix linter errors

--- a/packages/ui/src/components/ActionBar/style.less
+++ b/packages/ui/src/components/ActionBar/style.less
@@ -7,15 +7,20 @@
 @condo-action-bar-overflow-width: @condo-global-spacing-16;
 @condo-action-bar-width: calc(100% + @condo-action-bar-overflow-width * 2);
 @condo-action-bar-large-screen-bottom-indent: @condo-global-spacing-24;
+@condo-action-bar-container-padding: @condo-global-spacing-40;
+
+.condo-affix-placeholder {
+  height: @condo-action-bar-large-screen-bottom-indent;
+}
 
 .condo-affix-content-wrapper {
   box-sizing: border-box;
   height: fit-content !important;
   padding: @condo-action-bar-overflow-width;
-  transition: box-shadow @condo-global-transition-duration-default ease-out;
 
   @media @from-mobile-small and @to-tablet-small {
     width: 100%;
+    padding-bottom: @condo-action-bar-large-screen-bottom-indent;
 
     & > .condo-space-item {
       width: 100%;
@@ -26,10 +31,14 @@
     }
   }
 
-  @media @from-tablet-large {
+  @media @from-mobile-small {
     position: relative;
     right: @condo-action-bar-overflow-width;
     width: @condo-action-bar-width;
+  }
+
+  @media @from-tablet-large {
+    transition: box-shadow @condo-global-transition-duration-default ease-out;
   }
 }
 
@@ -50,7 +59,7 @@
     width: auto !important;
 
     & .condo-affix-content-wrapper {
-      padding-bottom: @condo-global-spacing-32;
+      padding-bottom: @condo-action-bar-large-screen-bottom-indent;
 
       & > .condo-space-item {
         padding: 0  @condo-global-spacing-16;
