--- a/apps/condo/lang/es/messages/TICKET_COMMENT_CREATED/default.njk
+++ b/apps/condo/lang/es/messages/TICKET_COMMENT_CREATED/default.njk
@@ -1,2 +1,1 @@
-¡Tiene un nuevo comentario!
-Puede ver la solicitud siguiendo este enlace: {{ message.meta.data.url }}
+{{ message.meta.data.authorName }} ({{ message.meta.data.authorType }}): {{ message.meta.data.commentContent }}
