--- a/apps/condo/lang/es/messages/TICKET_CREATED/default.njk
+++ b/apps/condo/lang/es/messages/TICKET_CREATED/default.njk
@@ -1,2 +1,1 @@
-Se ha creado una nueva solicitud №{{ message.meta.data.ticketNumber }}
-Enlace de la solicitud: {{ message.meta.data.url }}
+{{ message.meta.data.ticketDetails }}
