--- a/apps/condo/lang/ru/messages/TICKET_COMMENT_CREATED/default.njk
+++ b/apps/condo/lang/ru/messages/TICKET_COMMENT_CREATED/default.njk
@@ -1,2 +1,1 @@
-Есть новый комментарий!
-Посмотреть заявку можно по ссылке: {{ message.meta.data.url }}
+{{ message.meta.data.authorName }} ({{ message.meta.data.authorType }}): {{ message.meta.data.commentContent }}
