--- a/apps/condo/lang/ru/messages/TICKET_CREATED/default.njk
+++ b/apps/condo/lang/ru/messages/TICKET_CREATED/default.njk
@@ -1,2 +1,1 @@
-Создана новая заявка №{{ message.meta.data.ticketNumber }}
-Ссылка на заявку: {{ message.meta.data.url }}
+{{ message.meta.data.ticketDetails }}
