--- a/apps/condo/domains/notification/components/UserMessagesList/UserMessagesList.css
+++ b/apps/condo/domains/notification/components/UserMessagesList/UserMessagesList.css
@@ -40,3 +40,7 @@
   max-height: unset;
   margin: 16px auto auto;
 }
+
+.user-messages-settings-sound-tooltip.condo-tooltip {
+  max-width: unset;
+}
